<resources>
    <string name="app_name" translatable="false">Sis Diary</string>
    <string name="facebook_app_id">263585040827329</string>

    <string name="child_name">Ім\'я</string>
    <string name="password">Пароль</string>
    <string name="title">UR sister\'s Diary</string>
    <string name="enter_button">Заглянути</string>
    <string name="edit_homework">Что задали?</string>
    <string name="addHW_button">Записать</string>
    <string name="deleteHW_button">Стереть</string>

    <string name="menu_title_notes">Записи</string>
    <string name="menu_title_msgs">Повідомлення</string>
    <string name="menu_title_timetable">Розклад</string>
    <string name="menu_title_photos">Фоточки</string>

    <string name="dialog_subject_tittle">Додати новий урок:</string>
    <string name="dialog_hw_tittle">Додати домашнє завдання:</string>
    <string name="dialog_time_begin">Час початку</string>
    <string name="dialog_homework">Домашнє завдання</string>
    <string name="dialog_name">Назва</string>


    <string name="cab_delete">Видалити</string>
    <string name="cab_add_homework">Додати домашку</string>
    <string name="cab_edit_lesson">Редагувати урок</string>


    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="action_exit">Вийти</string>
    <string name="action_settings">Налаштування</string>

    <string name="pref_user_data">com.alia.sisdiary.PREFERENCE_USER_DATA</string>
    <string name="saved_user_id">com.alia.sisdiary.SAVED_USER_ID</string>
    <string name="saved_user_photourl">com.alia.sisdiary.SAVED_USER_PHOTOURL</string>
    <string name="saved_user_name">com.alia.sisdiary.SAVED_USER_NAME</string>
    <string name="saved_login_type">com.alia.sisdiary.SAVED_LOGIN_TYPE</string>

    <string name="login_type_google">com.alia.sisdiary.LOGIN_TYPE_GOOGLE</string>
    <string name="login_type_facebook">com.alia.sisdiary.LOGIN_TYPE_FACEBOOK</string>


</resources>
